# finetuned_customer_chatbot

./: .gitignore
services/tuning/: pyproject.toml
services/tuning/src/: uns.py
services/tuning/src/data/: faq.jsonl
